--- a/client/angular.json
+++ b/client/angular.json
@@ -30,6 +30,8 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/tailwind.css",
               "src/styles.scss"
             ]
           },
