feat(header): implement responsive header component with mobile menu
- Added header component HTML structure with logo, navigation links, and shopping cart.
- Styled header component using SCSS for responsive design and aesthetics.
- Implemented mobile menu toggle functionality in the header component TypeScript file.
- Included Material icons and badges for enhanced UI elements.

--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^20.3.3",
     "@angular/build": "^20.0.3",
-    "@angular/cli": "^20.0.3",
+    "@angular/cli": "^20.3.3",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.7.0",
@@ -35,6 +36,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "vite": "^7.1.7"
   }
 }
