--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=skinet;User Id=sa;Password=Password@1;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost,1433;Database=skinet;User Id=sa;Password=Password@1;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "Redis": "localhost"
   }
 }
