--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,15 @@ services:
     platform: "linux/amd64"
     ports:
       - "1433:1433"
-      
+    volumes:
+      - sql-data:/var/opt/mssql
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+
+volumes:
+  sql-data:
+  redis-data:
